--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:css": "postcss assets/main.css -o assets/main_browser.css"
   },
   "dependencies": {
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
     "next": "^15.0.3",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "webpack": "^5.97.0"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/react": "^17.0.9",
     "autoprefixer": "^10.2.6",
     "deepmerge": "^4.2.2",
