--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
+    "keen-slider": "^6.8.6",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
