--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ticker": "^1.2.2",
+    "swr": "^2.3.0",
     "webpack": "^5.97.0"
   },
   "devDependencies": {
